--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ jobs:
   - stage: build
     script: "./gradlew build"
   - stage: deploy
-    script: skip
+    script: "./gradlew build"
     deploy:
       - provider: lambda
         function_name: PortlandBus-prd
