--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ branches:
   - prd
 install:
   - ./gradlew build
+before_deploy:
+- ls ${$TRAVIS_BUILD_DIR}
 deploy:
   - provider: lambda
     skip_cleanup: true
@@ -13,7 +15,7 @@ deploy:
     role: $LAMBDA_ROLE
     runtime: java8
     handler_name: com.merricklabs.portlandbus.PortlandBusStreamHandler
-    zip: build/distributions/portlandbus-java.zip
+    zip: ${TRAVIS_BUILD_DIR}/build/distributions/portlandbus-java.zip
     on:
       branch: prd
   - provider: lambda
@@ -23,7 +25,7 @@ deploy:
     role: $LAMBDA_ROLE
     runtime: java8
     handler_name: com.merricklabs.portlandbus.PortlandBusStreamHandler
-    zip: build/distributions/portlandbus-java.zip
+    zip: ${TRAVIS_BUILD_DIR}/build/distributions/portlandbus-java.zip
     on:
       branch: stg
 
