--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ deploy:
     region: us-west-2
     role: $LAMBDA_ROLE
     runtime: java8
+    handler_name: com.merricklabs.portlandbus.PortlandBusStreamHandler
     zip: "${TRAVIS_BUILD_DIR}/build/distributions/PortlandBus-Java.zip"
     memory_size: 512
     on:
@@ -22,6 +23,7 @@ deploy:
     region: us-west-2
     role: $LAMBDA_ROLE
     runtime: java8
+    handler_name: com.merricklabs.portlandbus.PortlandBusStreamHandler
     zip: "${TRAVIS_BUILD_DIR}/build/distributions/PortlandBus-Java.zip"
     memory_size: 512
     on:
