Added module name

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ deploy:
     region: us-west-2
     role: $LAMBDA_ROLE
     runtime: java8
-    handler_name: com.merricklabs.portlandbus.PortlandBusStreamHandler
+    module_name: com.merricklabs.portlandbus
+    handler_name: PortlandBusStreamHandler
     zip: "${TRAVIS_BUILD_DIR}/build/distributions/PortlandBus-Java.zip"
     memory_size: 512
     on:
@@ -23,7 +24,8 @@ deploy:
     region: us-west-2
     role: $LAMBDA_ROLE
     runtime: java8
-    handler_name: com.merricklabs.portlandbus.PortlandBusStreamHandler
+    module_name: com.merricklabs.portlandbus
+    handler_name: PortlandBusStreamHandler
     zip: "${TRAVIS_BUILD_DIR}/build/distributions/PortlandBus-Java.zip"
     memory_size: 512
     on:
