--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,15 @@ dependencies {
     compile(
             'com.amazon.alexa:ask-sdk:2.4.1',
             'org.projectlombok:lombok:1.18.2',
-            'org.testng:testng:6.14.3',
             'com.google.guava:guava:25.1-jre',
             'ch.qos.logback:logback-core:1.2.3',
             'com.squareup.okhttp3:okhttp:3.11.0',
             'javax.inject:javax.inject:1',
             'com.google.inject:guice:4.2.0'
+    )
+
+    testCompile(
+            'org.testng:testng:6.14.3'
     )
 }
 
@@ -26,3 +29,9 @@ task buildZip(type: Zip) {
 }
 
 build.dependsOn buildZip
+
+test {
+    useTestNG {
+        options.includeGroups 'integration'
+    }
+}
