--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'kotlin'
 
 repositories {
     mavenCentral()
@@ -22,6 +23,7 @@ dependencies {
 
 task buildZip(type: Zip) {
     from compileJava
+    from compileKotlin
     from processResources
     into('lib') {
         from configurations.compileClasspath
@@ -34,4 +36,11 @@ test {
     useTestNG {
         options.includeGroups 'integration'
     }
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
 }
