Reimplemented all the intent handlers in Kotlin

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+    ext.kotlin_version = '1.2.71'
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 plugins {
     id "org.jetbrains.kotlin.jvm" version "1.2.71"
 }
@@ -7,23 +18,25 @@ apply plugin: 'kotlin'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     compile(
+            "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version",
             'com.amazon.alexa:ask-sdk:2.4.1',
             'org.projectlombok:lombok:1.18.2',
             'com.google.guava:guava:25.1-jre',
             'ch.qos.logback:logback-core:1.2.3',
             'com.squareup.okhttp3:okhttp:3.11.0',
             'javax.inject:javax.inject:1',
-            'com.google.inject:guice:4.2.0'
+            'org.koin:koin-core:1.0.1'
     )
 
     testCompile(
-            'org.testng:testng:6.14.3'
+            'org.testng:testng:6.14.3',
+            'org.koin:koin-test:1.0.1'
     )
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 task buildZip(type: Zip) {
@@ -48,13 +61,4 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
-}
-buildscript {
-    ext.kotlin_version = '1.2.71'
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
 }
