Added timeout declaration to travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ deploy:
     handler_name: PortlandBusStreamHandler
     zip: "${TRAVIS_BUILD_DIR}/build/distributions/PortlandBus.zip"
     memory_size: 512
+    timeout: 5
     on:
       branch: prd
   - provider: lambda
@@ -30,6 +31,7 @@ deploy:
     handler_name: PortlandBusStreamHandler
     zip: "${TRAVIS_BUILD_DIR}/build/distributions/PortlandBus.zip"
     memory_size: 512
+    timeout: 5
     on:
       branch: stg
 
